Fixes #377 admin panel: tabs not vertically aligning properly

--- a/templates/basic/css/webstore.css
+++ b/templates/basic/css/webstore.css
@@ -88,38 +88,43 @@ margin:15px 0 0;
 #nav {
 background:url(images/nav_bg.png);
 border:1px solid #727272;
-height:45px;
+height:36px;
 overflow:hidden;
-width:765px;
-}
-
-#nav li {
-display:inline;
-list-style:none;
 width:100%;
 }
 
-#nav a {
+
+#nav a { 
 border-left:1px solid #535353;
 border-right:1px solid #adadad;
-color:#111;
 font-size:12px;
 font-weight:700;
-height:57px;
-overflow:hidden;
-padding:18px 0 12px;
-text-align:center;
-text-decoration:none;
+color: #111;
+text-shadow: none;
+display: table;
+float: left;
+margin: 0px;
+height: 36px;
+text-align: center;
+text-decoration: none;
 text-shadow:#bebebe 1px 1px 1px;
 }
-
 .arrow {position: absolute; right: -50px;}
+#nav a:hover {
+background:url(images/nav_bg_hover.png);
+}
+
+#nav .innertab{
+        display: table-cell;
+        vertical-align: middle;
+}
+#nav a.productmenu { min-width: 105px; width: 105px; max-width: 105px;}
 
 #products a {
 background:url();
 display:block;
 float:left;
-height:22px;
+height:24px;
 width:100px;
 }
 
@@ -129,15 +134,15 @@ background-position:74px 33px;
 color:#fff;
 font-size:12px;
 font-weight:700;
-height:40px;
-margin:4px 0 15px;
+height:36px;
 padding:15px 0 0 4px;
 position:absolute;
 text-decoration:none;
 text-shadow:#bebebe 1px 1px 1px;
-top:130px;
+top:128px;
+left-margin:48px;
 width:105px;
-z-index:998; 
+z-index:1200; 
 }
 
 #nav_products ul {
@@ -153,8 +158,9 @@ padding:0;
 border:none;
 color:#111;
 display:block;
+margin-left:-3px;
 margin-right:3px;
-padding:15px 7px 16px 10px;
+padding:15px 0 11px 10px;
 text-decoration:none;
 }
 
@@ -204,75 +210,38 @@ background:url(images/nav_bg_hover.png);
 left:auto;
 }
 
+
 /* Formatting for automated tabs. Note these do NOT refer to 1st, 2nd, 3rd and 4th tabs */
 /* Instead, these are used WHEN there are 4 tabs, or 3 tabs, etc. So #tab4 is used for all */
 /* tabs when four are turned on, since width is proportional to the count() */
+#nav a.tab1 { width:182px; }
+#nav a.tab2 { width:182px; }
+#nav a.tab3 { width:142px; }
+#nav a.tab4 { width:112px; }
+#nav a.tab5 { width:90px; }
+#nav a.tab6 { width:75px; }
 
-#tab1 a {
-display:block;
-float:left;
-height:24px;
-width:226px;
-}
-
-#tab2 a {
-display:block;
-float:left;
-height:24px;
-width:226px;
-}
-
-#tab3 a {
-display:block;
-float:left;
-height:24px;
-width:150px;
-}
-
-#tab4 a {
-display:block;
-float:left;
-height:24px;
-width:112px;
-}
-
-#tab5 a {
-display:block;
-float:left;
-height:24px;
-width:90px;
-}
-
-#tab6 a {
-display:block;
-float:left;
-height:24px;
-width:75px;
-}
-
-#tab1 a.tabvcenter,#tab2 a.tabvcenter,#tab3 a.tabvcenter,#tab4 a.tabvcenter,#tab5 a.tabvcenter,#tab6 a.tabvcenter {
-padding:12px 0;
-}
 
 #searchedge {
 border-left:1px solid #adadad;
 clear:both;
-height:38px;
-padding:6px 10px 0 18px;
+height:30px;
+padding:6px 0px 0 8px;
 position:absolute;
-margin-left:556px;
+margin-left:563px;
 width:1px;
 }
 #searchentry {
-border-left:1px solid #535353;
-clear:both;
-height:33px;
-padding:12px 10px 0 20px;
-position:absolute;
-margin-left:557px;
-width:200px;
 
+clear:both;
+height:30px;
+padding:6px 0px 0 8px;
+position:absolute;
+margin-left:564px;
+width:199px;
 }
+
+
 
 #newProducts a {
 display:block;
