--- a/templates/deluxe/css/webstore.css
+++ b/templates/deluxe/css/webstore.css
@@ -98,25 +98,32 @@ overflow:hidden;
 width:100%;
 }
 
-#nav li {
-display:inline;
-list-style:none;
-width:100%;
-}
-
-#nav a {
+#nav a { 
 border-left:1px solid #bebebe;
 border-right:1px solid #222;
-color:#111;
 font-size:12px;
 font-weight:700;
-height:60px;
-overflow:hidden;
-padding:12px 0;
-text-align:center;
-text-decoration:none;
+background:url(images/nav_bg.png);
+color: #111;
+text-shadow: none;
+display: table;
+float: left;
+margin: 0px;
+height: 36px;
+text-align: center;
+text-decoration: none;
 text-shadow:#bebebe 1px 1px 1px;
 }
+
+#nav a:hover {
+background:url(images/nav_bg_hover.png);
+}
+
+#nav .innertab{
+        display: table-cell;
+        vertical-align: middle;
+}
+#nav a.productmenu { min-width: 102px; width: 102px; max-width: 102px;}
 
 #products a {
 background:url();
@@ -142,6 +149,7 @@ top:130px;
 width:105px;
 z-index:998;  
 }
+
 
 #nav_products ul {
 border:none;
@@ -213,69 +221,30 @@ display:block;
 /* Formatting for automated tabs. Note these do NOT refer to 1st, 2nd, 3rd and 4th tabs */
 /* Instead, these are used WHEN there are 4 tabs, or 3 tabs, etc. So #tab4 is used for all */
 /* tabs when four are turned on, since width is proportional to the count() */
+#nav a.tab1 { width:182px; }
+#nav a.tab2 { width:182px; }
+#nav a.tab3 { width:142px; }
+#nav a.tab4 { width:112px; }
+#nav a.tab5 { width:90px; }
+#nav a.tab6 { width:75px; }
 
-#tab1 a {
-display:block;
-float:left;
-height:24px;
-width:226px;
-}
-
-#tab2 a {
-display:block;
-float:left;
-height:24px;
-width:226px;
-}
-
-#tab3 a {
-display:block;
-float:left;
-height:24px;
-width:150px;
-}
-
-#tab4 a {
-display:block;
-float:left;
-height:24px;
-width:112px;
-}
-
-#tab5 a {
-display:block;
-float:left;
-height:24px;
-width:90px;
-}
-
-#tab6 a {
-display:block;
-float:left;
-height:24px;
-width:75px;
-}
-
-#tab1 a.tabvcenter,#tab2 a.tabvcenter,#tab3 a.tabvcenter,#tab4 a.tabvcenter,#tab5 a.tabvcenter,#tab6 a.tabvcenter {
-padding:5px 0;
-}
 
 #searchedge {
 border-left:1px solid #fff;
 clear:both;
 height:30px;
-padding:6px 10px 0 18px;
+padding:6px 0px 0 8px;
 position:absolute;
-margin-left:557px;
+margin-left:563px;
 width:1px;
 }
 #searchentry {
-border-left:1px solid #000;
+
 clear:both;
 height:30px;
-padding:6px 10px 0 18px;
+padding:6px 0px 0 8px;
 position:absolute;
-margin-left:558px;
+margin-left:564px;
 width:199px;
 }
 
